@@ -3,7 +3,7 @@
 $site_config['sessionName'] = '#sessionName'; // A single word that identifies this install.
 $site_config['cookie_prefix'] = '#cookie_prefix_'; // This allows you to have multiple trackers, eg for demos, testing etc.
 $site_config['cookie_path'] = '#cookie_path'; // generally '/' is good
-$site_config['cookie_domain'] = '.#cookie_domain'; // set to eg: .somedomain.com or is subdomain set to: .sub.somedomain.com
+$site_config['cookie_domain'] = '#cookie_domain'; // set to eg: .somedomain.com or is subdomain set to: .sub.somedomain.com
 $site_config['cookie_lifetime'] = #cookie_lifetime; // length of time cookies will be valid
 $site_config['domain'] = '#domain';
 $site_config['sessionKeyPrefix'] = '#cookie_prefix_'; // useful if serving multiple sites
